refactor(allocation): generalize allocation demand workflow